[tool.poetry]
name = "rl-anatomical-landmark-detection"
version = "0.1.0"
description = ""
authors = ["Sally"]
readme = "README.md"
packages = [{include = "rl_anatomical_landmark_detection"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
torchvision = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
